# VideoPlayer

./: CMakeLists.txt  IVideoCall.h  XAudioPlay.cpp  XAudioPlay.h  XAudioThread.cpp  XAudioThread.h  XDecode.cpp  XDecode.h  XDecodeThread.cpp  XDecodeThread.h  XDemux.cpp  XDemux.h  XDemuxThread.cpp  XDemuxThread.h  XResample.cpp  XResample.h  XSlider.cpp  XSlider.h  XVideoThread.cpp  XVideoThread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xvideowidget.cpp  xvideowidget.h
